added global row id optimizer and tests for query phase